--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
 			<version>3.12.12</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
